@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="156"
+VERSION_BUILD="157"
 
 # $Log$
+#
+# BUILD : 1.4.0.157 (SVN)
+# BUGS  : 469
+# NOTES : Write pid file before loading flatfile db files.
 #
 # BUILD : 1.4.0.156 (SVN)
 # BUGS  : N/A
